Changed pathes to the images

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 						<h1> Our Team </h1>
 						<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel nisi pharetra nibh varius pharetra ac sagittis nisi. Etiam pharetra vestibulum hendrerit. Donec ex libero, fringilla vitae purus sit amet, rhoncus pharetra lorem. Pellentesque id sem id lacus ultricies vehicula. Aliquam rutrum mi non. </p>
 					</div>
-					<img class="specImg" src="1.jpg">
+					<img class="specImg" src="images\1.jpg">
 				</div>
 			</div>
 			<div class="infoBlock chess" id="about">
 				<pointer id="pabout"></pointer>
 				<div><p>Creative</p></div>
-				<div><img src="2.jpg"></img></div>
+				<div><img src="images\2.jpg"></img></div>
 				<div><p>Develop</p></div>
-				<div><img src="3.jpg"></img></div>
+				<div><img src="images\3.jpg"></img></div>
 				<div><p>Design</p></div>
-				<div><img src="4.jpg"></img></div>
+				<div><img src="images\4.jpg"></img></div>
 				<div><p>Support</p></div>
-				<div><img src="5.jpg"></img></div>
+				<div><img src="images\5.jpg"></img></div>
 				<div><p>Think</p></div>
 			</div>
 			<div class="infoBlock" id="ideas">
@@ -69,7 +69,7 @@
 			</div>
 			<div class="infoBlock" id="contact">
 				<pointer id="pcontact"></pointer>
-				<img class="forgood" src="6.jpg"></img>
+				<img class="forgood" src="images\6.jpg"></img>
 				<div class="form">
 					<h1>Contact Us</h1>
 					<form>
