little update for more html syntax

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 				<div class="form">
 					<h1>Contact Us</h1>
 					<form>
-						<input class="un" placeholder="Name"></input>
-						<input type=email class="deux" placeholder="Email"></input>
+						<input placeholder="Name"></input>
+						<input type=email placeholder="Email"></input>
 						<input placeholder="Subject"></input>
 						<textarea class="msg" placeholder="Message"></textarea>
 						<input type=submit></input>
